--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <h1>🚀 Submit Your Campaign</h1>
+    <h1 class="dark-header">🚀 Submit Your Campaign</h1>
   </header>
 
   <main class="container">
@@ -43,5 +43,6 @@
   </footer>
 </body>
 </html>
+
 
 
