--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -16,11 +16,10 @@
 
   <!-- Submit Campaign Logic -->
   <script type="module" src="js/submit-campaign.js" defer></script>
+  <script type="module" src="js/header.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1 class="dark-header">🚀 Submit Your Campaign</h1>
-  </header>
+  <div id="site-header"></div>
 
   <main class="container">
     <div id="current-credits" class="credit-display">Loading credits...</div>
@@ -43,6 +42,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
