--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -12,11 +12,11 @@
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
 
   <!-- Firebase Config -->
-  <script src="firebaseConfig.js"></script>
+  <script src="firebaseConfig.js" defer></script>
 
-  <!-- Submit Campaign Logic -->
-  <script type="module" src="js/submit-campaign.js" defer></script>
+  <!-- Header and Logic -->
   <script type="module" src="js/header.js" defer></script>
+  <script type="module" src="js/submit-campaign.js" defer></script>
 </head>
 <body>
   <div id="site-header"></div>
@@ -42,6 +42,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
