--- a/public/repost.html
+++ b/public/repost.html
@@ -1,46 +1,38 @@
-<!-- public/repost.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Repost & Earn - TrackRepost</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
-  <script src="firebaseConfig.js" defer></script>
-  <script src="js/repost.js" defer></script>
+
+  <!-- Config + Logic -->
+  <script src="firebaseConfig.js"></script>
+  <script type="module" src="js/repost.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>🎧 Repost & Earn Credits</h1>
+    <h1>🔁 Repost & Earn Credits</h1>
   </header>
 
-  <main class="container">
-    <div id="campaign-container">
-      <h2>Loading campaign...</h2>
-    </div>
-
-    <form id="repost-form" class="hidden">
-      <label>
-        <input type="checkbox" id="likeTrack" checked /> ❤️ Like the track (earn +1 credit)
-      </label>
-
-      <label for="comment">Leave a comment (earn +2 credits):</label>
-      <textarea id="comment" rows="3" placeholder="Optional comment..."></textarea>
-
-      <button type="submit">🔁 Repost Now</button>
-    </form>
-
-    <div id="status" class="status"></div>
+  <main class="container" id="repost-container">
+    <p>Loading available campaigns...</p>
   </main>
 
   <footer>
-    <p>© 2025 TrackRepost</p>
+    <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
+
+  <div id="site-header"></div>
+  <script type="module" src="js/header.js" defer></script>
 </body>
 </html>
+
 
 
 
