--- a/public/repost.html
+++ b/public/repost.html
@@ -14,24 +14,28 @@
   <!-- Config + Logic -->
   <script src="firebaseConfig.js"></script>
   <script type="module" src="js/repost.js" defer></script>
+  <script type="module" src="js/header.js" defer></script>
 </head>
+
 <body>
+  <div id="site-header"></div>
+
   <header>
     <h1>🔁 Repost & Earn Credits</h1>
   </header>
 
-  <main class="container" id="repost-container">
-    <p>Loading available campaigns...</p>
+  <main class="container">
+    <div id="repost-container">
+      <p>Loading available campaigns...</p>
+    </div>
   </main>
 
   <footer>
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
-
-  <div id="site-header"></div>
-  <script type="module" src="js/header.js" defer></script>
 </body>
 </html>
+
 
 
 
