--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -12,14 +12,15 @@
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
 
   <!-- Firebase Config -->
-  <script src="firebaseConfig.js" defer></script>
+  <script src="firebaseConfig.js"></script>
 
-  <!-- Header and Logic -->
-  <script type="module" src="js/header.js" defer></script>
+  <!-- Submit Campaign Logic -->
   <script type="module" src="js/submit-campaign.js" defer></script>
 </head>
 <body>
-  <div id="site-header"></div>
+  <header>
+    <h1>🚀 Submit Your Campaign</h1>
+  </header>
 
   <main class="container">
     <div id="current-credits" class="credit-display">Loading credits...</div>
@@ -37,11 +38,51 @@
     <div id="status" class="status-message hidden"></div>
   </main>
 
+  <!-- 🔐 Login UI if not signed in -->
+  <div id="login-container" class="container" style="display: none;">
+    <h2>Welcome to TrackRepost</h2>
+    <p>You must be logged in to submit your campaign.</p>
+    <button id="login-btn">Log in with Google</button>
+  </div>
+
+  <!-- 🔐 Login Script -->
+  <script type="module">
+    import {
+      getAuth,
+      signInWithPopup,
+      GoogleAuthProvider,
+      onAuthStateChanged
+    } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+
+    const auth = getAuth();
+    const provider = new GoogleAuthProvider();
+    const loginContainer = document.getElementById("login-container");
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        loginContainer.style.display = "block";
+      }
+    });
+
+    document.getElementById("login-btn").addEventListener("click", async () => {
+      try {
+        await signInWithPopup(auth, provider);
+        location.reload();
+      } catch (err) {
+        console.error("Login failed", err);
+      }
+    });
+  </script>
+
   <footer>
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
+
+  <div id="site-header"></div>
+  <script type="module" src="js/header.js" defer></script>
 </body>
 </html>
+
 
 
 
