--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,14 +27,20 @@
       <div id="user-info"></div>
     </div>
 
-    <div id="userInfo" class="info-box">Loading user...</div>
+    <!-- 🧑 User Info -->
+    <div id="userInfo" class="info-box">
+      Loading user...
+      <div id="planBadge" class="plan-badge"></div>
+    </div>
 
+    <!-- 💰 Credits -->
     <div class="credits-box">
       <h2>💰 Credits</h2>
       <p id="creditBalance">Loading...</p>
       <a href="credits.html" class="button">Buy More Credits</a>
     </div>
 
+    <!-- 📣 Campaigns -->
     <div class="campaigns-section">
       <h2>📣 Your Campaigns</h2>
       <div id="campaigns" class="campaigns-grid">Loading campaigns...</div>
@@ -50,4 +56,3 @@
   <script type="module" src="js/dashboard.js" defer></script>
 </body>
 </html>
-
