--- a/public/credits.html
+++ b/public/credits.html
@@ -14,7 +14,7 @@
   <!-- Firebase Config -->
   <script src="firebaseConfig.js"></script>
 
-  <!-- Script for Purchase Buttons -->
+  <!-- ✅ This must be a module -->
   <script type="module" src="js/credits.js" defer></script>
 </head>
 <body>
@@ -65,4 +65,5 @@
   </footer>
 </body>
 </html>
+
 
