--- a/public/credits.html
+++ b/public/credits.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buy Credits - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
+
+  <!-- Firebase Config -->
+  <script type="module" src="firebaseConfig.js"></script>
+
+  <!-- Credit Purchase Script -->
+  <script type="module" src="js/credits.js" defer></script>
 </head>
 <body>
   <header>
@@ -52,11 +63,9 @@
   <footer>
     <p>© 2025 TrackRepost. All rights reserved.</p>
   </footer>
-
-  <!-- ✅ Load module version -->
-  <script type="module" src="js/credits.js" defer></script>
 </body>
 </html>
+
 
 
 
