--- a/public/credits.html
+++ b/public/credits.html
@@ -6,16 +6,18 @@
   <title>Buy Credits - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
-  <!-- Firebase Config -->
-  <script type="module" src="firebaseConfig.js"></script>
+  <!-- ✅ Firebase Config -->
+  <script src="/js/firebaseConfig.js"></script>
 
-  <!-- Credit Purchase Script -->
-  <script type="module" src="js/credits.js" defer></script>
+  <!-- ✅ Initialize Firebase -->
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </script>
 </head>
 <body>
   <header>
@@ -63,9 +65,8 @@
   <footer>
     <p>© 2025 TrackRepost. All rights reserved.</p>
   </footer>
+
+  <!-- ✅ Credit Purchase Script -->
+  <script src="/js/credits.js" defer></script>
 </body>
 </html>
-
-
-
-
