--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,13 +6,18 @@
   <title>Dashboard - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
-  <!-- Firebase Config -->
-  <script src="firebaseConfig.js"></script>
+  <!-- ✅ Firebase Config -->
+  <script src="/js/firebaseConfig.js"></script>
+
+  <!-- ✅ Initialize Firebase -->
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </script>
 </head>
 <body>
   <header>
@@ -28,31 +33,5 @@
     </div>
 
     <!-- 🧑 User Info -->
-    <div id="userInfo" class="info-box">
-      Loading user...
-      <div id="planBadge" class="plan-badge"></div>
-    </div>
+    <div id="user
 
-    <!-- 💰 Credits -->
-    <div class="credits-box">
-      <h2>💰 Credits</h2>
-      <p id="creditBalance">Loading...</p>
-      <a href="credits.html" class="button">Buy More Credits</a>
-    </div>
-
-    <!-- 📣 Campaigns -->
-    <div class="campaigns-section">
-      <h2>📣 Your Campaigns</h2>
-      <div id="campaigns" class="campaigns-grid">Loading campaigns...</div>
-    </div>
-  </div>
-
-  <footer>
-    <p>© 2025 TrackRepost. All rights reserved.</p>
-  </footer>
-
-  <!-- Scripts -->
-  <script type="module" src="js/login.js" defer></script>
-  <script type="module" src="js/dashboard.js" defer></script>
-</body>
-</html>
