--- a/public/payment-success.html
+++ b/public/payment-success.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Payment Success</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+
+  <!-- ✅ Firebase Config -->
+  <script src="/js/firebaseConfig.js"></script>
+
+  <!-- ✅ Initialize Firebase -->
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -22,26 +33,12 @@
   <p id="message">Processing your credits...</p>
   <a href="/dashboard">Go to Dashboard</a>
 
-  <script type="module">
-    // ✅ Firebase config (update these if needed)
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
-      authDomain: "trackrepost-921f8.firebaseapp.com",
-      projectId: "trackrepost-921f8",
-      appId: "1:967836604288:web:3782d50de7384c9201d365"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
+  <script>
     const params = new URLSearchParams(window.location.search);
     const credits = params.get("credits");
     const messageEl = document.getElementById("message");
 
-    onAuthStateChanged(auth, (user) => {
+    firebase.auth().onAuthStateChanged((user) => {
       if (user) {
         const displayName = user.displayName || "friend";
         if (credits) {
@@ -50,7 +47,6 @@
           messageEl.textContent = `Thanks ${displayName}, your payment was successful!`;
         }
       } else {
-        // User not signed in, fallback message
         if (credits) {
           messageEl.textContent = `You purchased ${credits} credits!`;
         } else {
@@ -61,3 +57,4 @@
   </script>
 </body>
 </html>
+
