--- a/public/repost.html
+++ b/public/repost.html
@@ -5,32 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Repost History - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
-  <script type="module" src="firebaseConfig.js"></script>
-  <script type="module" src="js/reposts.js" defer></script>
-</head>
-<body>
-  <header>
-    <h1>📄 Your Repost History</h1>
-  </header>
 
-  <main class="container">
-    <div id="repost-history">Loading your reposts...</div>
-  </main>
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
-  <footer>
-    <p>© 2025 TrackRepost. All Rights Reserved.</p>
-  </footer>
+  <!-- ✅ Firebase Config -->
+  <script src="/js/firebaseConfig.js"></script>
 
-  <div id="site-header"></div>
-  <script type="module" src="js/header.js" defer></script>
-</body>
-</html>
-
-
-
-
-
-
+  <!-- ✅ Initialize Firebase -->
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </
