--- a/public/soundcloud-callback.html
+++ b/public/soundcloud-callback.html
@@ -5,7 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SoundCloud Callback - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
-  <script type="module" src="js/soundcloud-callback.js"></script>
+
+  <!-- ✅ Firebase SDKs (compat) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+
+  <!-- ✅ Firebase Config -->
+  <script src="/js/firebaseConfig.js"></script>
+
+  <!-- ✅ Initialize Firebase -->
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </script>
+
+  <!-- ✅ SoundCloud Callback Script -->
+  <script src="/js/soundcloud-callback.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -14,4 +28,3 @@
   </div>
 </body>
 </html>
-
