--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,5 +33,31 @@
     </div>
 
     <!-- 🧑 User Info -->
-    <div id="user
+    <div id="userInfo" class="info-box">
+      Loading user...
+      <div id="planBadge" class="plan-badge"></div>
+    </div>
 
+    <!-- 💰 Credits -->
+    <div class="credits-box">
+      <h2>💰 Credits</h2>
+      <p id="creditBalance">Loading...</p>
+      <a href="credits.html" class="button">Buy More Credits</a>
+    </div>
+
+    <!-- 📣 Campaigns -->
+    <div class="campaigns-section">
+      <h2>📣 Your Campaigns</h2>
+      <div id="campaigns" class="campaigns-grid">Loading campaigns...</div>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 TrackRepost. All rights reserved.</p>
+  </footer>
+
+  <!-- ✅ Scripts -->
+  <script src="/js/login.js" defer></script>
+  <script src="/js/dashboard.js" defer></script>
+</body>
+</html>
